# Agent-ID

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  agent.py  audit_log.py  credential.py  policy.py
backend/app/routers/: agents.py  audit.py  credentials.py  verify.py
backend/app/services/: audit_service.py  jwt_service.py  policy_engine.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/tests/: conftest.py  test_agents.py  test_credentials.py  test_policy_engine.py
examples/: crewai_example.py  langchain_example.py  openai_example.py  typescript_example.ts
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/api-keys/: page.tsx
frontend/app/audit/: page.tsx
frontend/components/: recent-activity.tsx  register-agent-dialog.tsx  sidebar.tsx  stat-card.tsx
frontend/components/ui/: dialog.tsx  toaster.tsx
sdks/python/: pyproject.toml
sdks/python/agentid/: __init__.py  client.py  exceptions.py  models.py
sdks/python/agentid/middleware/: __init__.py  crewai.py  langchain.py
sdks/python/tests/: test_client.py
sdks/typescript/: package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: client.ts  index.ts  types.ts
sdks/typescript/tests/: client.test.ts
